@@ -1,4 +1,6 @@
 Development
+	Version sync with gnome-mplayer
+	Handle more javascript methods, that allow setting callbacks on events
 	Make qtsrc locations work, makes some apple sites work
 	Add configure option --disable-caching, which never uses local storage for the media cache
 	If cache size from gnome-mplayer is 0, set media to streaming
